hard-gists/143e65a425722dc2f3d0/run.log
=== Docker Run Log for 143e65a425722dc2f3d0 ===
Started at: Mi 29. Okt 12:13:58 CET 2025

[2025-10-29 12:13:58] START: Running container for 143e65a425722dc2f3d0
[2025-10-29 12:13:59] SUCCESS: Container 54fc567daeccf8e5ab45608ec93785ef8ef6699b915313dfaaded61756848cb4 started for 143e65a425722dc2f3d0
=== Container logs for 143e65a425722dc2f3d0 ===
  File "/snippet.py", line 28
    print query
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 143e65a425722dc2f3d0 ===
[2025-10-29 12:14:01] INFO: Container 54fc567daeccf8e5ab45608ec93785ef8ef6699b915313dfaaded61756848cb4 has stopped
